# The
# ██████╗  █████╗ ██╗   ██╗███████╗████████╗ █████╗ ██████╗ ████████╗
# ██╔══██╗██╔══██╗╚██╗ ██╔╝██╔════╝╚══██╔══╝██╔══██╗██╔══██╗╚══██╔══╝
# ██████╔╝███████║ ╚████╔╝ ███████╗   ██║   ███████║██████╔╝   ██║   
# ██╔══██╗██╔══██║  ╚██╔╝  ╚════██║   ██║   ██╔══██║██╔══██╗   ██║   
# ██║  ██║██║  ██║   ██║   ███████║   ██║   ██║  ██║██║  ██║   ██║   
# ╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝   ╚══════╝   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝   
#   project
#
#   https://github.com/jacmoe/raystart
#
#   (c) 2021 Jacob Moena
#
#   Zlib License
#
cmake_minimum_required(VERSION 3.7)

project(raystart)

set(CMAKE_CXX_STANDARD 17)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif(MSVC)

set(RAYLIB_INCLUDE_DIR ./raylib/src)

include_directories(
    ${RAYLIB_INCLUDE_DIR}
    ./code/main
    ./code/utility
)

add_subdirectory(raylib)

add_subdirectory(code)
